skeleton mobile screen full width ui bug fix

--- a/client/src/pages/manga/manga.css
+++ b/client/src/pages/manga/manga.css
@@ -26,6 +26,7 @@
 
 .manga__cover-wrapper {
   position: relative;
+  width: fit-content;
 }
 
 .manga__cover-img {
